--- a/WS/WS/WS.csproj
+++ b/WS/WS/WS.csproj
@@ -51,11 +51,11 @@
     <Compile Include="fmRegistracia.Designer.cs">
       <DependentUpon>fmRegistracia.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="fmAvtorizacia.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="fmAvtorizacia.Designer.cs">
+      <DependentUpon>fmAvtorizacia.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
