--- a/WS/WS/WS.csproj
+++ b/WS/WS/WS.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="fmReg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmReg.Designer.cs">
+      <DependentUpon>fmReg.cs</DependentUpon>
+    </Compile>
     <Compile Include="fmRegistracia.cs">
       <SubType>Form</SubType>
     </Compile>
